Fixed #386, table padding/spacing is now correct

--- a/templates/css/hms.css
+++ b/templates/css/hms.css
@@ -22,3 +22,16 @@
 .rooms_list {
     padding-left:10px;
 }
+
+.hms table {
+    border-collapse:separate;
+    border-spacing:2px;
+}
+
+.hms td {
+    padding:3px;
+}
+
+.hms th {
+    padding:3px;
+}
